# dk

./: .gitignore  Cargo.toml  NOTES.md  right.awk
charts/: blue-run-11.knit  blue-run-12.knit  blue-run.knit  jules-braille.knit  jules-h14v13.knit  jules-padded.knit
dkbin/: Cargo.toml
dkbin/src/: args.rs  main.rs  subcommands.rs
dkbin/src/args/: common.rs
dkbin/src/subcommands/: image_convert.rs
dklalr/: Cargo.toml  build.rs
dklalr/src/: ast.rs  builtins.rs  context.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  value.rs
dklalr/src/parse/: ast.rs  checkable.rs  lexer.rs  mod.rs  parser.lalrpop
dklib/: Cargo.toml
dklib/src/: chart.rs  lib.rs  operations.rs  test.rs  thing.rs  units.rs
dklib/src/chart/: convert.rs  merge.rs  pad.rs  repeat.rs  stamp.rs  trim.rs
dklib/src/operations/: convert.rs  merge.rs  pad.rs  reflect.rs  repeat.rs  split.rs  trim.rs  zip.rs
dklib/src/subcommands/: image_convert.rs  knitchart.rs  merge.rs  mod.rs  pad.rs  reflect.rs  split.rs  trim.rs  zip.rs
dklib/test_files/: leftside.knit
dkparse/: Cargo.toml
dkparse/src/: lib.rs  parser.rs  span.rs  spanning_reader.rs
src/: main.rs
src/dk/: args.rs  chart.rs  image_convert.rs  mod.rs  split.rs  test.rs  thing.rs  units.rs  util.rs
src/dk/subcommands/: image_convert.rs  knitchart.rs  merge.rs  mod.rs  pad.rs  reflect.rs  split.rs  trim.rs  zip.rs
test_files/: needs_trimming.knit  to_trim.knit
