[package]
name = "dk"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fehler = { path = "../fehler" }
anyhow = "1.0.28"
structopt = "0.3.14"
image = "0.23.4"
imageproc = "0.20.0"
#graphics_buffer = "0.7.3"
#piston2d-graphics = "0.36.0"
