[package]
name = "dklalr"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

[lib]
name = "dklalr"


[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
assure = { path = "../../assure" }
dklib = { path = "../dklib" }
fehler = { git = "https://github.com/gmadrid/fehler.git", version = "1.0.0" }
lalrpop-util = "0.19"
regex = "1.3"
lazy_static = "1.4.0"
thiserror = "1.0.20"
